--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,16 @@ body {
 .description {
   color: navy;
   font-size: 2.5rem;
-  margin-top: 3.5%;
+  margin-top: 2.5%;
   width: 100%;
   text-align: center;
 }
 
 .fa-phone {
+  color: red;
+  margin-right: 2%;
+}
+.fa-envelope {
   color: red;
   margin-right: 2%;
 }
